Update European workshop date

--- a/app/templates/rock-and-roll-ember.hbs
+++ b/app/templates/rock-and-roll-ember.hbs
@@ -158,7 +158,7 @@
       </li>
       <li>
         <h3>Americas timezone</h3>
-        <strong>Jan 25th - 12pm - 4pm EST (GMT-5)</strong><br>
+        <strong>Jan 23rd - 9am - 1pm EST (GMT-5)</strong><br>
         <a href="https://www.eventbrite.com/e/implementing-authentication-in-ember-americas-timezone-tickets-28926729627" class="button red-button" target="_blank">
           Book this workshop for <strong>$495</strong> <i class="fa fa-chevron-right"></i>
         </a>
